<resources>
    <string name="app_name">IPOS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_outbox">Outbox</string>
    <string name="action_logout">Logout</string>
    <string name="msg_load_default">Loading...</string>
    <string name="assets_fonts_folder">fonts</string>
    <string name="mandatory">mandatory</string>
    <string name="superscript">&lt;sup&gt;*&lt;/sup&gt;</string>
    <string name="typeface_not_found">Typeface not found!!</string>
    <string name="fa_user_plus">&#xf234;</string>
    <string name="fa_thumb_tack">&#xf08d;</string>
    <string name="fa_qrcode">&#xf029;</string>
    <string name="fa_redeem">&#xf290;</string>
    <string name="billing_n_cash">Billing &amp; Cash</string>
    <string name="retail_sales">Retail Sales</string>
    <string name="ddr_sales">DDR Sales (B2B)</string>
    <string name="please_wait">Please Wait...</string>
    <string name="Rs">\u20B9</string>
    <string name="toggle_flash">Flash</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="internet_connection_error_string">No Internet Connection</string>
    <string name="internet_refresh_button_text">Refresh</string>
    <string name="internet_ok_button_text">OK</string>
    <string name="play_service_error_string">Google Play Service Not Found</string>
    <string name="welcome_text_activity_login">Welcome, Good Morning !</string>
    <string name="email_hint_activity_login">Email</string>
    <string name="password_hint_activity_login">Password</string>
    <string name="login_button_text_activity_login">LOGIN</string>
    <string name="text_forgot_password_activity_login">Forgot Password?</string>
    <string name="toolbar_title_login">USER LOGIN</string>
    <string name="insight"><![CDATA[Insights & Analytics]]></string>
    <string name="dashboard">Dashboard</string>
    <string name="my_store">My Store 1</string>
    <string name="focus">Focus</string>
    <string name="pending_orders_to_deliver">Pending Orders to Deliver</string>
    <string name="my_store_">My Store</string>
    <string name="online_store">Online Store</string>
    <string name="other_store">Other Stores</string>
    <string name="low_inventory">Low Inventory</string>
    <string name="total_sales">Total Sales</string>
    <string name="_32k">\u20A8 32k</string>
    <string name="total_sales_">63% below Target (₹ 86k) 37% Achievement</string>
    <string name="schema_performance">Scheme Performances</string>
    <string name="end_of_season">End of Season</string>
    <string name="awcollection">A/W Collection 2018</string>
    <string name="top_performing_stores">Top Performing Stores</string>
    <string name="fast_moving">Fast Moving</string>
    <string name="compliance">Compliance Summary</string>
    <string name="no_internet_connection_warning_server_error">No internet connection available</string>
    <string name="immediate">Immediate Attention</string>
    <string name="upcoming">Upcoming Events</string>
    <string name="pending">Pending</string>
    <string name="done">Done</string>
    <string name="store">Store</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="month_sales">Month Sales</string>
    <string name="day_sales">Day Sales</string>
    <string name="product">Product</string>
    <string name="store_sales_summary">Store Sales Summary</string>
    <string name="week">Week</string>
    <string name="store_status">Store Status</string>
    <string name="opened">Opened @ 10:00 am today</string>
    <string name="customer_footprints">Customer Footprints</string>
    <string name="customer_feedback">Customer Feedback</string>
    <string name="warehouse">Warehouse</string>
    <string name="supplier">Supplier</string>
    <string name="inventory">Inventory in transit</string>
    <string name="barcode">Barcode</string>
    <string name="items">Items</string>
    <string name="qty">Qty</string>
    <string name="total_gst">Total GST</string>
    <string name="more_details">More Details</string>
    <string name="pay">Pay</string>
    <string name="fa_right">&#xf061;</string>
    <string name="fa_left_arrow">&#xf359;</string>
    <string name="fa_cross">&#xf00d;</string>
    <string name="search">Search</string>
    <string name="search_by_name">Search by name</string>
    <string name="add">Add</string>
    <string name="fa_trash">&#xf1f8;</string>
    <string name="select_camera">Select Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="toolBar_title_kyc_activity">KYC</string>
    <string name="toolbar_title_catalogue_product_details">PRODUCT CATALOGUE</string>
    <string name="toolbar_title_customer_screen">Customer Information</string>
    <string name="toolbar_title_payment_screen">Payment Mode</string>
    <string name="toolbar_title_customer_screen_details">Customer Details</string>
    <string-array name="navigation_drawer_items_array">
        <item>Dashboard &amp; Insight</item>
        <item>Product Catalogue</item>
        <item>Stock &amp; Price</item>
        <item>Loyalty Program</item>
        <item>Partner Connect</item>
    </string-array>
    <string-array name="months">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="title_partner_connect">Partner Connect</string>
    <string name="title_ddrcu">New DDR</string>
    <string name="title_kyc_connect">KYC</string>
    <string name="total_discount">Total Discount</string>
    <string name="rounding_off">Rounding off</string>
    <string name="less_details">Less Details</string>
    <string name="select_all">Select All</string>
    <string name="otc_discount">OTC Discount</string>
    <string name="cgst">CGST</string>
    <string name="sgst">SGST</string>
    <string name="otc_discount_details">OTC Discount Details</string>
    <string name="fa_cross_circle">&#xf057;</string>
    <string name="discount_value">Discount Value</string>
    <string name="apply">Apply</string>
    <string name="otc_approval_details">This action needs an approval &amp; the same has been initiated. Check approval status on workflow menu.</string>
    <string name="otc_discount_workflow_approval">OTC Discount Workflow Approval</string>
    <string name="viewall">View All</string>
    <string name="order_tracking">Order Tracking</string>
    <string name="accepted">Accepted</string>
    <string name="dispatched">Dispatched</string>
    <string name="upcoming_shipment">Upcoming Shipment</string>
    <string name="loyalty">Loyalty Program</string>
    <string name="redeem_points">Redeem Points</string>
    <string name="earned_points">Earned Points</string>
    <string name="redeemed_points">Redeemed Points</string>
    <string name="available_points">Available Points</string>
    <string name="order_value">Value of Orders by Period</string>
    <string name="mtd">MTD</string>
    <string name="ytd">YTD</string>
    <string name="products">Products</string>
    <string name="order_values">Order Value</string>
    <string name="top">Top 5</string>
    <string name="retail_sale">Retail Sales</string>
    <string name="enter_number">Enter Mobile Number</string>
    <string name="customer_details">Customer Details</string>
    <string name="address">Billing address - 145, Sector 40, Gurugram, 122018</string>
    <string name="suggest_to_buy">Suggest to buy</string>
    <string name="suggest_dummy">Trizole was out of stock on last billing. its now available</string>
    <string name="recent_orders">Recent Orders</string>
    <string name="enter_product">Enter Product</string>
    <string name="order_summary">Order Summary</string>
    <string name="discounts">Discounts</string>
    <string name="deliverby">Deliver by</string>
    <string name="this_order">This Order</string>
    <string name="accumulated">Accumulated</string>
    <string name="total">Total</string>
    <string name="new_">New</string>
    <string name="delivered">Delivered</string>
    <string name="cancelled">Cancelled</string>
    <string name="new_orders">New Order</string>
    <string name="order_centre">Order Center</string>
    <string name="accept">Accept</string>
    <string name="redeem_value">Redeem Value</string>
    <string name="points_to_redeem">Points to Redeem</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="no_match_found">No Match Found!</string>
    <string name="redeem">Redeem</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="Rs_">\u20B9 3902.90</string>
    <string name="retail">Retail</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="upi">UPI</string>
    <string name="credit">Credit</string>
    <string name="voucher">Voucher</string>
    <string name="wallet">Wallet</string>
    <string name="wallet_sale_heading">Wallet</string>
    <string name="enter_cash_amount">Enter cash amount</string>
    <string name="Rs_0">\u20B9 0.00</string>
    <string name="enter_card_amount">Enter card amount</string>
    <string name="select_card_type">Select card type</string>
    <string name="enter_last_digit">Enter last 4 digits</string>
    <string name="enter_transaction_number">Enter transaction number</string>
    <string name="balance">Balance</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="cod">COD</string>
    <string name="payment">Payment</string>
    <string name="Perc">%</string>
    <string name="togglebutton1">ToggleButton1</string>
    <string name="togglebutton2">ToggleButton2</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="enter_otp">Please Enter OTP</string>
    <string name="qty_available">quantity available</string>
    <string name="proceed_update">Update &amp; Proceed</string>
    <string name="stock">Stock</string>
    <string name="available">Available</string>
    <string name="check_stock">Check Stock</string>
    <string name="reserved">Reserved</string>
    <string name="cart">Cart</string>
    <string name="an_offer">An Offer</string>
    <string-array name="ordervalue">
        <item>KGM Traders</item>
    </string-array>
    <string-array name="payment_type">
        <item>Select Payment Mode</item>
        <item>Cash</item>
        <item>Card</item>
        <item>Points</item>
    </string-array>
    <string name="gst_perc">GST%</string>
    <string name="sgst_perc">SGST %</string>
    <string name="cgst_perc">CGST %</string>
    <string name="payment_details">Payment Details</string>
    <string name="paid_by_cash">Paid By Cash:</string>
    <string name="tender_changes_">Tender Changes:</string>
    <string name="paid_by_card">Paid By Card</string>
    <string name="card_type_">Card Type:</string>
    <string name="card_number_">Card Number:</string>
    <string name="expiry_date_">Expiry Date:</string>
    <string name="gst_summary">GST Summary</string>
    <string name="value">Value</string>
    <string name="gst">GST</string>
    <string name="total_gst_value">Total GST Value</string>
</resources>