<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

    </group>

    <item android:title="@string/billing_n_cash"
        android:id="@+id/nav_billing"
        android:icon="@drawable/ic_receipt">
        <menu>
            <item
                android:id="@+id/nav_retail_sales"
                android:title="@string/retail_sales" />
            <item
                android:id="@+id/nav_ddr_sales"
                android:title="@string/ddr_sales" />
        </menu>
    </item>

    <item android:title="@string/insight"
        android:id="@+id/nav_insight"
        android:icon="@drawable/ic_receipt">
        <menu>
            <item
                android:id="@+id/nav_dashbaord"
                android:title="@string/dashboard" />

        </menu>
    </item>
</menu>
