<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp"
    android:background="@color/colorPrimary">
    <TextView
        android:id="@+id/tvUserAdd"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fa_user_plus"
        android:textSize="10dp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/tvPin"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fa_thumb_tack"
        android:textSize="10dp"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/imvQRCode"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_discount"/>

    <TextView
        android:id="@+id/tvRedeem"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fa_redeem"
        android:textSize="10dp"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/imvGlobe"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_earth"/>
</LinearLayout>

</LinearLayout>