<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <View
           android:layout_width="0dp"
           android:layout_height="1dp"
           android:layout_weight="1"/>
       <quay.com.ipos.ui.CustomTextView
           android:id="@+id/tvSGSTRate"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:gravity="center"
           android:text="@string/sgst_perc"
           android:paddingTop="@dimen/dim_10"
           android:textColor="@color/black"
           android:textSize="@dimen/text_size_14sp" />
       <View
           android:layout_width="0dp"
           android:layout_height="1dp"
           android:layout_weight="1"/>
       <quay.com.ipos.ui.CustomTextView
           android:id="@+id/tvSGSTItemValue"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:gravity="center"
           android:text="@string/value"
           android:paddingTop="@dimen/dim_10"
           android:textColor="@color/black"
           android:textSize="@dimen/text_size_14sp" />
       <View
           android:layout_width="0dp"
           android:layout_height="1dp"
           android:layout_weight="1"/>
       <quay.com.ipos.ui.CustomTextView
           android:id="@+id/tvSGSTValue"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:gravity="center"
           android:text="@string/sgst"
           android:paddingTop="@dimen/dim_10"
           android:paddingLeft="@dimen/dim_10"
           android:textColor="@color/black"
           android:textSize="@dimen/text_size_14sp" />
       <View
           android:layout_width="0dp"
           android:layout_height="1dp"
           android:layout_weight="1"/>
   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <quay.com.ipos.ui.CustomTextView
            android:id="@+id/tvCGSTRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cgst_perc"
            android:paddingTop="@dimen/dim_10"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14sp" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <quay.com.ipos.ui.CustomTextView
            android:id="@+id/tvCGSTItemValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/value"
            android:paddingTop="@dimen/dim_10"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14sp" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <quay.com.ipos.ui.CustomTextView
            android:id="@+id/tvCGSTValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/cgst"
            android:paddingTop="@dimen/dim_10"
            android:paddingLeft="@dimen/dim_10"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14sp" />
        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
